# action-label-rust-incompatible

./: Cargo.toml  Dockerfile  Dockerfile-localbuilt  README.md  action.yml
.github/workflows/: test_and_push.yml
src/: lib.rs  main.rs
