[package]
name = "action-label-rust-incompatible"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = 'src/lib.rs'

[[bin]]
name = 'analyzer'
path = 'src/main.rs'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
octocrab = "0.8.11"
tempdir = "0.3"
copy_dir = "0.1"
anyhow = "1.0.38"
futures = "0.3"
